# retriever-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: build_retriever.sh  build_retriever_fineweb.sh  build_retriever_note_event.sh  build_retriever_spatial.sh  build_retriever_wikipedia.sh  build_retriever_wikitext_103.sh  build_retriever_wsi.sh  download_corpus.sh  update_retriever.sh
src/faisslib/: build_retriever.py  retriever.py  update_retriever.py
src/preprocess/: format_gene.py  format_parquet.py  format_spatial.py  format_wikipedia_split.py  format_wsi.py
